--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "vue3-vite-cli",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --mode development",
+    "build": "vite build --mode production",
+    "release": "vite build --mode release",
     "lint": "eslint . --fix"
   },
   "dependencies": {
