--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
+    "@vitejs/plugin-vue": "^2.3.3",
     "@vue/compiler-sfc": "^3.0.4",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
@@ -26,7 +27,9 @@
     "prettier": "^2.5.1",
     "qs": "^6.10.3",
     "sass-loader": "^12.6.0",
+    "vant": "^3.4.9",
     "vite": "^1.0.0-rc.13",
+    "vite-plugin-style-import": "^1.4.1",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   }
