--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-vue": "^8.5.0",
     "prettier": "^2.5.1",
     "qs": "^6.10.3",
+    "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "vant": "^3.4.9",
     "vite": "^1.0.0-rc.13",
