--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
+    "postcss-pxtorem": "^6.0.0",
     "prettier": "^2.5.1",
     "qs": "^6.10.3",
     "sass": "^1.51.0",
