--- a/package.json
+++ b/package.json
@@ -2,22 +2,25 @@
   "name": "vue3-vite-cli",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite --mode development",
+    "dev": "vite --host --mode development",
     "build": "vite build --mode production",
     "release": "vite build --mode release",
     "lint": "eslint . --fix"
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "vue": "^3.0.4"
+    "vue": "^3.2.35",
+    "vite": "^2.9.9",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/compiler-sfc": "^3.0.4",
+    "@vue/compiler-sfc": "^3.2.35",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
+    "babel-plugin-import": "^1.13.5",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -30,9 +33,8 @@
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "vant": "^3.4.9",
-    "vite": "^1.0.0-rc.13",
     "vite-plugin-style-import": "^1.4.1",
-    "vue-router": "^4.0.13",
+    "vite-plugin-vue2": "^2.0.1",
     "vuex": "^4.0.2"
   }
 }
