--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dev": "vite --host --mode development",
     "build": "vite build --mode production",
     "release": "vite build --mode release",
+    "upload": "node upload.js",
+    "deploy": "npm run build && npm run upload",
     "lint": "eslint . --fix"
   },
   "dependencies": {
@@ -21,6 +23,7 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "babel-plugin-import": "^1.13.5",
+    "colors": "^1.4.0",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
