--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "vue": "^3.2.35",
+    "pinia": "^2.1.7",
     "vite": "^2.9.9",
+    "vue": "^3.2.35",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
